--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "axios": "^1.2.0",
+    "bootstrap": "^5.2.3",
+    "lodash": "^4.17.21",
+    "on-change": "^4.0.2",
+    "yup": "^0.32.11"
   }
 }
