--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,3 +14,6 @@ parserOptions:
 rules:
   no-console: 0
   import/extensions: 0
+  import/no-unresolved: 0
+  no-param-reassign: 0
+  no-underscore-dangle: [ 2, { "allow": [ "__filename", "__dirname" ] } ]
